--- a/LinkerPlayer/Styles/SolidColorBrushes.xaml
+++ b/LinkerPlayer/Styles/SolidColorBrushes.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:sys="clr-namespace:System;assembly=mscorlib">
+  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
   <SolidColorBrush x:Key="TitleBarForegroundBrush" Color="{DynamicResource TitleBarForegroundColor}" />
   <SolidColorBrush x:Key="TitleBarBackgroundBrush" Color="{DynamicResource TitleBarBackgroundColor}" />
@@ -23,16 +22,6 @@
   <SolidColorBrush x:Key="MainWindowGradientEndBrush" Color="{DynamicResource MainWindowGradientEndColor}" />
   <SolidColorBrush x:Key="MainWindowBorderBrush" Color="{DynamicResource MainWindowBorderColor}" />
 
-  <SolidColorBrush x:Key="ChildWindowBackgroundBrush" Color="{DynamicResource ChildWindowBackgroundColor}" />
-
-  <SolidColorBrush x:Key="FirstDarkBrush" Color="{DynamicResource FirstDarkColor}" />
-  <SolidColorBrush x:Key="FirstLightBrush" Color="{DynamicResource FirstLightColor}" />
-  <SolidColorBrush x:Key="FirstBackgroundBrush" Color="{DynamicResource FirstBackgroundColor}" />
-  <SolidColorBrush x:Key="PrimaryBackgroundBrush" Color="{DynamicResource PrimaryBackgroundColor}" />
-  <SolidColorBrush x:Key="SecondBackgroundBrush" Color="{DynamicResource SecondBackgroundColor}" />
-  <SolidColorBrush x:Key="StandardTextForegroundBrush" Color="{DynamicResource StandardTextForegroundColor}" />
-  <SolidColorBrush x:Key="InactiveSelectionBrush" Color="{DynamicResource InactiveSelectionColor}" />
-
   <SolidColorBrush x:Key="PlaylistTabForegroundBrush" Color="{DynamicResource PlaylistTabForegroundColor}" />
   <SolidColorBrush x:Key="PlaylistTabBackgroundBrush" Color="{DynamicResource PlaylistTabBackgroundColor}" />
   <SolidColorBrush x:Key="PlaylistTabBorderBrush" Color="{DynamicResource PlaylistTabBorderColor}" />
@@ -40,13 +29,6 @@
   <SolidColorBrush x:Key="PlaylistTabMouseOverBackgroundBrush" Color="{DynamicResource PlaylistTabMouseOverBackgroundColor}" />
   <SolidColorBrush x:Key="PlaylistTabSelectedForegroundBrush" Color="{DynamicResource PlaylistTabSelectedForegroundColor}" />
   <SolidColorBrush x:Key="PlaylistTabSelectedBackgroundBrush" Color="{DynamicResource PlaylistTabSelectedBackgroundColor}" />
-
-  <SolidColorBrush x:Key="NewPlaylistButtonForegroundBrush" Color="{DynamicResource NewPlaylistButtonForegroundColor}" />
-  <SolidColorBrush x:Key="NewPlaylistButtonBackgroundBrush" Color="{DynamicResource NewPlaylistButtonBackgroundColor}" />
-  <SolidColorBrush x:Key="NewPlaylistButtonMouseOverForegroundBrush" Color="{DynamicResource NewPlaylistButtonMouseOverForegroundColor}" />
-  <SolidColorBrush x:Key="NewPlaylistButtonMouseOverBackgroundBrush" Color="{DynamicResource NewPlaylistButtonMouseOverBackgroundColor}" />
-  <SolidColorBrush x:Key="NewPlaylistNamePopupForegroundBrush" Color="{DynamicResource NewPlaylistNamePopupForegroundColor}" />
-  <SolidColorBrush x:Key="NewPlaylistNamePopupBackgroundBrush" Color="{DynamicResource NewPlaylistNamePopupBackgroundColor}" />
 
   <SolidColorBrush x:Key="TrackListColumnHeaderForegroundBrush" Color="{DynamicResource TrackListColumnHeaderForegroundColor}" />
   <SolidColorBrush x:Key="TrackListColumnHeaderBackgroundBrush" Color="{DynamicResource TrackListColumnHeaderBackgroundColor}" />
@@ -62,9 +44,6 @@
 
   <SolidColorBrush x:Key="PlayerForegroundBrush" Color="{DynamicResource PlayerForegroundColor}" />
   <SolidColorBrush x:Key="PlayerBackgroundBrush" Color="{DynamicResource PlayerBackgroundColor}" />
-  <SolidColorBrush x:Key="PlayerActiveBrush" Color="{DynamicResource PlayerActiveColor}" />
-  <SolidColorBrush x:Key="PlayerStartGradientBrush" Color="{DynamicResource PlayStartGradientColor}" />
-  <SolidColorBrush x:Key="PlayerEndGradientBrush" Color="{DynamicResource PlayEndGradientColor}" />
 
   <SolidColorBrush x:Key="MenuForegroundBrush" Color="{DynamicResource MenuForegroundColor}" />
   <SolidColorBrush x:Key="MenuBackgroundBrush" Color="{DynamicResource MenuBackgroundColor}" />
@@ -86,9 +65,6 @@
   <SolidColorBrush x:Key="ComboboxItemSelectedForegroundBrush" Color="{DynamicResource ComboboxItemSelectedForegroundColor}" />
   <SolidColorBrush x:Key="ComboboxItemSelectedBackgroundBrush" Color="{DynamicResource ComboboxItemSelectedBackgroundColor}" />
 
-
-  <SolidColorBrush x:Key="ImageBackgroundBrush" Color="{DynamicResource ImageBackgroundColor}" />
-
   <SolidColorBrush x:Key="ScrollBarTrackBrush" Color="{DynamicResource ScrollBarTrackColor}" />
   <SolidColorBrush x:Key="ScrollBarThumbBrush" Color="{DynamicResource ScrollBarThumbColor}" />
   <SolidColorBrush x:Key="ScrollBarArrowForegroundBrush" Color="{DynamicResource ScrollBarArrowForegroundColor}" />
@@ -104,37 +80,6 @@
     <GradientStop Offset="0" Color="{DynamicResource SpectrumStartColor}" />
     <GradientStop Offset="1" Color="{DynamicResource SpectrumEndColor}" />
   </LinearGradientBrush>
-
-  <sys:Double x:Key="FontSizeLarge">11</sys:Double>
-  <sys:Double x:Key="FontSizeBiggest">11</sys:Double>
-  <sys:Double x:Key="FontSizeBigger">11</sys:Double>
-  <sys:Double x:Key="FontSizeBig">10</sys:Double>
-  <sys:Double x:Key="FontSizeNormal">10</sys:Double>
-  <sys:Double x:Key="FontSizeSmall">9</sys:Double>
-  <sys:Double x:Key="FontSizeSmaller">8</sys:Double>
-  <sys:Double x:Key="FontSizeSmallest">7</sys:Double>
-  <sys:Double x:Key="AlbumSize">100</sys:Double>
-  <sys:Double x:Key="ControlPadding">2</sys:Double>
-  <Thickness x:Key="ControlPaddingMargin">2</Thickness>
-
-  <VisualBrush x:Key="CdBrush" Stretch="Fill">
-    <VisualBrush.Visual>
-      <Canvas
-        Width="48"
-        Height="48"
-        Clip="F1 M 0,0L 48,0L 48,48L 0,48L 0,0"
-        UseLayoutRounding="False">
-        <Path
-          Canvas.Left="11"
-          Canvas.Top="11"
-          Width="26"
-          Height="26"
-          Data="F1 M 24,11C 31.1797,11 37,16.8203 37,24C 37,31.1797 31.1797,37 24,37C 16.8203,37 11,31.1797 11,24C 11,16.8203 16.8203,11 24,11 Z M 24,21C 22.3431,21 21,22.3432 21,24C 21,25.6569 22.3431,27 24,27C 25.6568,27 27,25.6569 27,24C 27,22.3432 25.6568,21 24,21 Z M 31.433,32.1087C 32.7948,30.8598 33.841,29.2722 34.4383,27.4795L 28.7447,25.5816C 28.4732,26.3965 27.9976,27.1181 27.3786,27.6858L 31.433,32.1087 Z M 27.8634,34.3024C 28.5993,34.0263 29.2977,33.6736 29.949,33.2541L 26.7041,28.2064L 25.7561,28.6829L 27.8634,34.3024 Z M 16.7956,15.6873C 15.0147,17.2321 13.7352,19.3397 13.2338,21.7334L 19.1063,22.9697C 19.3342,21.8817 19.9158,20.9237 20.7253,20.2215L 16.7956,15.6873 Z "
-          Fill="#FF707070"
-          Stretch="Fill" />
-      </Canvas>
-    </VisualBrush.Visual>
-  </VisualBrush>
 
 </ResourceDictionary>
 
