Created SettingsManager to start saving AppSettings to JSON. Also refactered the code to be more MVVM,

--- a/LinkerPlayer/UserControls/PlaylistTabs.xaml
+++ b/LinkerPlayer/UserControls/PlaylistTabs.xaml
@@ -265,7 +265,7 @@
           GridLinesVisibility="None"
           HorizontalScrollBarVisibility="Visible"
           IsReadOnly="True"
-          ItemsSource="{Binding Tracks, IsAsync=True}"
+          ItemsSource="{Binding Tracks}"
           Loaded="DataGrid_Loaded"
           RowHeaderWidth="0"
           RowHeight="20"
