--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -236,8 +236,9 @@
         Margin="5,0,10,0"
         VerticalAlignment="Center"
         Maximum="100"
+        Minimum="0"
         Style="{StaticResource CustomHorizontalSlider}"
-        ValueChanged="VolumeSlider_ValueChanged" />
+        Value="{Binding VolumeSliderValue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
     </StackPanel>
 
@@ -263,8 +264,7 @@
         d:Content="{iconPacks:PackIconMaterial Kind=ShuffleDisabled,
                                                Width=15,
                                                Height=15}"
-        Command="{Binding ShuffleCommand}"
-        CommandParameter="{Binding Path=IsChecked, RelativeSource={RelativeSource Self}, Mode=TwoWay}"
+        IsChecked="{Binding ShuffleMode, Mode=TwoWay}"
         ToolTip="Shuffle (s)">
         <ToggleButton.Style>
           <Style BasedOn="{StaticResource LinkerCircleToggleButton}" TargetType="ToggleButton">
