Worked a bit on UI, cleaning up, and refactoring.

--- a/LinkerPlayer/Styles/StylesRepository.xaml
+++ b/LinkerPlayer/Styles/StylesRepository.xaml
@@ -4,14 +4,18 @@
   xmlns:audio="clr-namespace:LinkerPlayer.Audio"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+  xmlns:system="clr-namespace:System;assembly=System.Runtime"
   mc:Ignorable="d">
+
+  <system:Double x:Key="FontSizeTitle">22</system:Double>
+  <system:Double x:Key="FontSizeNormal">14</system:Double>
+  <system:Double x:Key="FontSizeButton">14</system:Double>
 
   <!--
     ************************
     MaximizeMinimizeButton
     ************************
   -->
-
   <Style x:Key="MaximizeMinimizeButton" TargetType="{x:Type Button}">
     <Setter Property="Foreground" Value="{DynamicResource TitleBarForegroundBrush}" />
     <Setter Property="Template">
