--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -82,7 +82,7 @@
         HorizontalAlignment="Left"
         VerticalAlignment="Top"
         d:Foreground=" White"
-        FontSize="22"
+        FontSize="{DynamicResource FontSizeTitle}"
         FontWeight="Light"
         Foreground="{DynamicResource TitleBarForegroundBrush}"
         Text="Equalizer" />
@@ -130,12 +130,13 @@
         Background="Transparent"
         BorderBrush="{DynamicResource ControlBorderBrush}"
         FontFamily="Segoe UI"
-        FontSize="16"
+        FontSize="{DynamicResource FontSizeNormal}"
         FontStyle="Normal"
         FontWeight="Normal"
         Foreground="Black"
         IsTextSearchEnabled="false"
         SelectionChanged="Presets_SelectionChanged"
+        SelectedItem="{Binding SelectedPreset}"
         Style="{StaticResource CustomComboBoxStyle}"
         ToolTip="Profiles" />
 
@@ -171,7 +172,7 @@
           d:Foreground="White"
           Click="NewButton_Click"
           Content="New"
-          FontSize="14"
+          FontSize="{DynamicResource FontSizeButton}"
           FontWeight="Normal"
           Foreground="{DynamicResource ControlForegroundBrush}"
           Style="{StaticResource LinkerRectangleButton}"
@@ -185,7 +186,7 @@
           d:Foreground="White"
           Click="SaveButton_Click"
           Content="Save"
-          FontSize="14"
+          FontSize="{DynamicResource FontSizeButton}"
           FontWeight="Normal"
           Foreground="{DynamicResource ControlForegroundBrush}"
           Style="{StaticResource LinkerRectangleButton}"
@@ -199,7 +200,7 @@
           d:Foreground="White"
           Click="DeleteButton_Click"
           Content="Delete"
-          FontSize="14"
+          FontSize="{DynamicResource FontSizeButton}"
           FontWeight="Normal"
           Foreground="{DynamicResource ControlForegroundBrush}"
           Style="{StaticResource LinkerRectangleButton}"
@@ -213,7 +214,7 @@
           d:Foreground="White"
           Click="ResetButton_Click"
           Content="Reset"
-          FontSize="14"
+          FontSize="{DynamicResource FontSizeButton}"
           FontWeight="Normal"
           Foreground="{DynamicResource ControlForegroundBrush}"
           Style="{StaticResource LinkerRectangleButton}"
@@ -560,7 +561,7 @@
         d:Foreground="White"
         Click="CloseButton_Click"
         Content="Close"
-        FontSize="14"
+        FontSize="{DynamicResource FontSizeButton}"
         FontWeight="Normal"
         Foreground="{DynamicResource ControlForegroundBrush}"
         Style="{StaticResource LinkerRectangleButton}" />
