--- a/LinkerPlayer/App.xaml
+++ b/LinkerPlayer/App.xaml
@@ -2,7 +2,8 @@
   x:Class="LinkerPlayer.App"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-  xmlns:local="clr-namespace:LinkerPlayer">
+  xmlns:local="clr-namespace:LinkerPlayer"
+  xmlns:system="clr-namespace:System;assembly=System.Runtime">
   <Application.Resources>
     <ResourceDictionary>
       <ResourceDictionary.MergedDictionaries>
