--- a/LinkerPlayer/UserControls/ToggleSwitch.xaml
+++ b/LinkerPlayer/UserControls/ToggleSwitch.xaml
@@ -99,9 +99,10 @@
       <Label
         Name="ToggleLabel"
         Grid.Column="1"
+        Margin="4,0"
         d:Content="Off"
         d:Foreground="White"
-        FontSize="14"
+        FontSize="{DynamicResource FontSizeNormal}"
         Foreground="{DynamicResource TitleBarForegroundBrush}" />
     </Grid>
   </Button>
